--- a/VCfixer/App.xaml
+++ b/VCfixer/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="VCfixer.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:VCfixer"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="VCfixer.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:VCfixer"
+    Startup="Application_Startup"
+    StartupUri="VCFixerWindow.xaml">
+    <Application.Resources />
 </Application>
